docs/k8-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: groot-rest-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: groot-port
  selector:
    app:  groot-rest
