docs/k8-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: joomla-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/proxy-body-size : 800m
    nginx.org/client-max-body-size: 800m
spec:
  rules:
  - host: rest.groot-comment.com
    http:
      paths:
      - path: /
        backend:
          serviceName: groot-rest-service
          servicePort: 80
  tls:
  - secretName: groot-tls-cert
    hosts:
    -  rest.groot-comment.com
